Setup for mobile layout and add animation to rocket.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 		<title>Enjineer</title>
 		<link rel="stylesheet" href="css/master.css" />
 	</head>
-	<body>
+	<body ng-controller="appCtrl">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation"
  >			<div class="navbar-header">
 				<i class="fa fa-3x fa-rocket"></i>
 				<strong>Enjineer</strong>
 				<p>Beta</p>
 			</div>
+			<button class="btn btn-large" type="button" ng-click="menu()">
+				<i class="fa fa-bars"></i>
+			</button>
 		</nav>
 		<div id="content">
 			<section id="sidebar">
@@ -20,13 +23,10 @@
 					<h4>MetroGistics</h4>
 					<ul>
 						<li>
-							<a href="#">PHP</a>
+							<a href="#/php">PHP</a>
 						</li>
 						<li>
-							<a href="#">JavaScript</a>
-						</li>
-						<li>
-							<a href="#">Pages</a>
+							<a href="#/js">JavaScript</a>
 						</li>
 					</ul>
 				</nav>
